updated css file path

--- a/output/team.html
+++ b/output/team.html
@@ -10,18 +10,17 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&family=Roboto:wght@100;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
     <link rel=stylesheet href="../templates/style.css">
 
 </head>
 
 <body>
-    <div id="container" class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
-            <div id="jumbo" class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 team-heading">
                 <h1 class="text-center">My Team</h1>
-                <hr>
             </div>
         </div>
     </div>
@@ -30,64 +29,62 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
                     <div class="card-header">
-                        <h2 class="card-title"><strong>Remi O'Shaughnessy</strong></h2>
-                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i><strong>Manager</strong></h3>
+                        <h2 class="card-title">Tony Jones</h2>
+                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
                     </div>
                     <div class="card-body">
                         <ul class="list-group">
-                            <li class="list-group-item">ID: 467</li>
-                            <li class="list-group-item">Email: <a href="mailto:remi@remi.com">remi@remi.com</a></li>
-                            <li class="list-group-item">Office number: 1325</li>
+                            <li class="list-group-item">ID: 47</li>
+                            <li class="list-group-item">Email: <a href="mailto:tj@comcast.com">tj@comcast.com</a></li>
+                            <li class="list-group-item">Office number: 5278456789</li>
                         </ul>
                     </div>
                 </div>
                 <div class="card employee-card">
                     <div class="card-header">
-                        <h2 class="card-title">Tom JOnes</h2>
+                        <h2 class="card-title">Sherry Purple</h2>
                         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
                     </div>
                     <div class="card-body">
                         <ul class="list-group">
-                            <li class="list-group-item">ID: 1345</li>
-                            <li class="list-group-item">Email: <a
-                                    href="mailto:tomjones@jones.com">tomjones@jones.com</a></li>
-                            <li class="list-group-item">GitHub: <a href="https://github.com/kaito47" target="_blank"
-                                    rel="noopener noreferrer">kaito47</a></li>
+                            <li class="list-group-item">ID: 678</li>
+                            <li class="list-group-item">Email: <a href="mailto:sp@gmail.com">sp@gmail.com</a></li>
+                            <li class="list-group-item">GitHub: <a href="https://github.com/sherryp9" target="_blank"
+                                    rel="noopener noreferrer">sherryp9</a></li>
                         </ul>
                     </div>
                 </div>
                 ,<div class="card employee-card">
                     <div class="card-header">
-                        <h2 class="card-title">Sarah Sporty</h2>
+                        <h2 class="card-title">Joe Dobbs</h2>
                         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
                     </div>
                     <div class="card-body">
                         <ul class="list-group">
-                            <li class="list-group-item">ID: 4590</li>
-                            <li class="list-group-item">Email: <a href="mailto:sarah@sporty.com">sarah@sporty.com</a>
+                            <li class="list-group-item">ID: 678</li>
+                            <li class="list-group-item">Email: <a href="mailto:jdobbs@yahoo.com">jdobbs@yahoo.com</a>
                             </li>
-                            <li class="list-group-item">GitHub: <a href="https://github.com/sporty" target="_blank"
-                                    rel="noopener noreferrer">sporty</a></li>
+                            <li class="list-group-item">GitHub: <a href="https://github.com/jdobbs56" target="_blank"
+                                    rel="noopener noreferrer">jdobbs56</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="card employee-card">
                     <div class="card-header">
-                        <h2 class="card-title">Kile Link</h2>
+                        <h2 class="card-title">Kelly Ire</h2>
                         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
                     </div>
                     <div class="card-body">
                         <ul class="list-group">
-                            <li class="list-group-item">ID: 23490</li>
-                            <li class="list-group-item">Email: <a href="mailto:link@link.com">link@link.com</a></li>
-                            <li class="list-group-item">School: Linkster Academy</li>
+                            <li class="list-group-item">ID: 45</li>
+                            <li class="list-group-item">Email: <a href="mailto:keye@gmail.com">keye@gmail.com</a></li>
+                            <li class="list-group-item">School: American</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <br>
 </body>
 
 </html>
