--- a/output/team.html
+++ b/output/team.html
@@ -28,60 +28,57 @@
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Tony Jones</h2>
-                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 47</li>
-                            <li class="list-group-item">Email: <a href="mailto:tj@comcast.com">tj@comcast.com</a></li>
-                            <li class="list-group-item">Office number: 5278456789</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Sherry Purple</h2>
-                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 678</li>
-                            <li class="list-group-item">Email: <a href="mailto:sp@gmail.com">sp@gmail.com</a></li>
-                            <li class="list-group-item">GitHub: <a href="https://github.com/sherryp9" target="_blank"
-                                    rel="noopener noreferrer">sherryp9</a></li>
-                        </ul>
-                    </div>
-                </div>
-                ,<div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Joe Dobbs</h2>
-                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 678</li>
-                            <li class="list-group-item">Email: <a href="mailto:jdobbs@yahoo.com">jdobbs@yahoo.com</a>
-                            </li>
-                            <li class="list-group-item">GitHub: <a href="https://github.com/jdobbs56" target="_blank"
-                                    rel="noopener noreferrer">jdobbs56</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Kelly Ire</h2>
-                        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 45</li>
-                            <li class="list-group-item">Email: <a href="mailto:keye@gmail.com">keye@gmail.com</a></li>
-                            <li class="list-group-item">School: American</li>
-                        </ul>
-                    </div>
-                </div>
+    <div class="card-header">
+        <h2 class="card-title">Tina Jones</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 47</li>
+            <li class="list-group-item">Email: <a href="mailto:tj@gmail.com">tj@gmail.com</a></li>
+            <li class="list-group-item">Office number: 524-386-7896</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Mary Sherman</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 235</li>
+            <li class="list-group-item">Email: <a href="mailto:msherman@yahoo.com">msherman@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/msherman89" target="_blank" rel="noopener noreferrer">msherman89</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Bob Dole</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 987</li>
+            <li class="list-group-item">Email: <a href="mailto:bananas@yahoo.com">bananas@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/bananabob89" target="_blank" rel="noopener noreferrer">bananabob89</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Sherry Joy</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 098</li>
+            <li class="list-group-item">Email: <a href="mailto:sjoy@yahoo.com">sjoy@yahoo.com</a></li>
+            <li class="list-group-item">School: Harvard</li>
+        </ul>
+    </div>
+</div>
             </div>
         </div>
     </div>
